# web3_date

./: .env  README.md  canister_ids.json  create_account.sh  create_new_user.sh  database.js  delete_account.sh  deploy.sh  dfx.json  did.sh  fill_test_data.sh  index.js  output.css  package-lock.json  package.json  postcss.config.js  remove_all_identities.sh  run_tests.sh  tailwind.config.js  tsconfig.json  user_ids.txt  webpack.config.js
.cargo/: config
controller/: chatController.js  userController.js
helper/: isValidPrincipal.js
middleware/: auth.js
models/: History.js  Message.js  User.js
routes/: chatRoutes.js  index.js  userRoutes.js
socket/: index.js
socket/helpers/: findSocket.js
src/DDate_backend/: Cargo.toml  DDate_backend.did
src/DDate_backend/src/: lib.rs  notification.rs  profile_creation.rs  profile_matcher.rs  right_and_left_swipe.rs  socket_server.rs  state_handler.rs
src/DDate_frontend/assets/: .ic-assets.json5  main.css
src/DDate_frontend/src/: AllRoutes.jsx  App.jsx  DevelopmentConfig.js  firebase.jsx  index.html  index.jsx
src/DDate_frontend/src/Components/: Explore.jsx  Feedback.jsx  Footer.jsx  Info.jsx  Loader.css  Loader.jsx  LogoutModal.jsx  MemberStatistics.jsx  NoMatchModal.css  NoMatchModal.jsx  Nodatacard.jsx  Notification.css  Notification.jsx  Profile.css  Profile.jsx  ProfileMobile.jsx  ProfileModal.jsx  ProfileModal2.jsx  ProfileViewer.jsx  SidebarComponent.jsx  Swipe.css  Swipe.jsx  SwipeBottomBar.jsx  WalletModal.jsx
src/DDate_frontend/src/Context/: ChatContext.jsx
src/DDate_frontend/src/Pages/: HomePage.jsx
(+25 files in other folders)
