[package]
name = "DDate_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.8"
ic-cdk = "0.14.0"
ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
ic-cdk-macros = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
sha2 = "0.10.8"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
futures = "0.3"